--- a/src/Backend/MyCookBook.API/MyCookBook.API.csproj
+++ b/src/Backend/MyCookBook.API/MyCookBook.API.csproj
@@ -1,13 +1,21 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <InvariantGlobalization>false</InvariantGlobalization>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\MyCookBook.Communication\MyCookBook.Communication.csproj" />
+    <ProjectReference Include="..\..\Shared\MyCookBook.Exceptions\MyCookBook.Exceptions.csproj" />
+    <ProjectReference Include="..\MyCookBook.Application\MyCookBook.Application.csproj" />
+    <ProjectReference Include="..\MyCookBook.Infrastructure\MyCookBook.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
