--- a/src/Backend/MyCookBook.Application/MyCookBook.Application.csproj
+++ b/src/Backend/MyCookBook.Application/MyCookBook.Application.csproj
@@ -1,10 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\MyCookBook.Communication\MyCookBook.Communication.csproj" />
+    <ProjectReference Include="..\..\Shared\MyCookBook.Exceptions\MyCookBook.Exceptions.csproj" />
+    <ProjectReference Include="..\MyCookBook.Domain\MyCookBook.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
