configuring the database connectionString and the additionalKey of the password in appSettings.Development.json

--- a/src/Backend/MyCookBook.API/appsettings.Development.json
+++ b/src/Backend/MyCookBook.API/appsettings.Development.json
@@ -1,8 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ConnectionStrings": {
+    "ConnectionDb": "Server=localhost;Database=mycookbookdb;Trusted_Connection=True;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "Settings": {
+    "Password": {
+      "AdditionalKey": "wwwwwww"
     }
   }
 }
