--- a/src/Backend/MyCookBook.Application/MyCookBook.Application.csproj
+++ b/src/Backend/MyCookBook.Application/MyCookBook.Application.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.16" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.5" />
   </ItemGroup>
 
   <ItemGroup>
